fixes budget card shadow cropping
Update layout.scss

--- a/src/style/layout.scss
+++ b/src/style/layout.scss
@@ -177,6 +177,7 @@
           .page {
             display: flex;
             flex-direction: column;
+            overflow: visible;
 
             .page-content {
               width: 100%;
